Fixed modal bg clipping, fixing responsive bugs

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   height: 100%;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1050px) {
   .addProjectContainer button {
     width: 40%;
   }
