--- a/src/components/projects/editModal/editModal.css
+++ b/src/components/projects/editModal/editModal.css
@@ -44,7 +44,7 @@
   background-color: white;
   margin: auto;
   width: 30%;
-  height: 35%;
+  height: auto;
 }
 
 .modalProjectContent label,
